--- a/scss/style.css
+++ b/scss/style.css
@@ -169,6 +169,40 @@
   margin-top: 9px;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  padding: 22px 25px 22px 25px;
+  background-color: #353535;
+  gap: 16px;
+}
+.footer__logo {
+  color: #FFFFFF;
+  font-family: Shrikhand;
+  font-weight: 400;
+  font-size: 18px;
+  margin: 0;
+}
+.footer__ul {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: #FFFFFF;
+  font-weight: 400;
+}
+.footer__li {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+
+.width-icone {
+  width: 13px;
+}
+
 body {
   margin: 0;
   font-family: Roboto;
