--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@ $third-color: #99E2D0;
 @import 'index-layout/fonctionnement';
 @import 'index-layout/reservation';
 @import 'index-layout/restaurant';
+@import 'footer/footer';
 
 body {
     margin: 0;
