--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -3,6 +3,13 @@
     flex-direction: column;
     padding: 0px 17px 17px 17px;
     height: 251px;
+    &__link {
+        display: flex;
+        flex-direction: column;
+        height: 251px;
+        text-decoration: none;
+        color: black;
+    }
     &__img {
         object-fit: cover;
         border-top-left-radius: 15px;
