Ajout page menu + mise en page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@ $third-color: #99E2D0;
 @import 'index-layout/reservation';
 @import 'index-layout/restaurant';
 @import 'footer/footer';
+@import 'menu-layout/menu.scss';
 
 body {
     margin: 0;
