--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -8,6 +8,8 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        box-shadow: 0px 2px 4px 0px #00000026;
+        z-index: 1000;
         .logo--size {
             height: 30px;
             width: 162px;
@@ -22,12 +24,14 @@
         align-items: center;
         width: 100%;
         background-color: #EAEAEA;
-        box-shadow: inset 0px 2px 4px 0px #00000026,
-                          0px 4px 4px 0px #00000040;
+        box-shadow: 0px 4px 4px 0px #00000040;
         .location--flex {
             display: flex;
             gap: 17px;
             color: #353535;
         }
+    }
+    .display-none {
+        display: none;
     }
 }
