--- a/scss/style.css
+++ b/scss/style.css
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
+  z-index: 1000;
 }
 .header .header__box-logo .logo--size {
   height: 30px;
@@ -24,12 +26,15 @@
   align-items: center;
   width: 100%;
   background-color: #EAEAEA;
-  box-shadow: inset 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078), 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
 }
 .header .header__box-location .location--flex {
   display: flex;
   gap: 17px;
   color: #353535;
+}
+.header .display-none {
+  display: none;
 }
 
 .btn-rounded {
@@ -221,6 +226,18 @@
 
 .width-icone {
   width: 13px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.img-menu {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 275px;
 }
 
 body {
