--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -21,3 +21,12 @@
     display: flex;
     justify-content: center;
 }
+
+.btn-commander {
+    padding: 16px 47px 15px 48px;
+    color: white;
+}
+
+.btn-shadow {
+    box-shadow: 0px 4px 10px 0px #00000040;
+}
