--- a/scss/menu-layout/_menu.scss
+++ b/scss/menu-layout/_menu.scss
@@ -1,6 +1,68 @@
+.base-menu {
+    display: flex;
+    flex-direction: column;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    position: relative;
+    margin-top: -50px;
+    z-index: 999;
+    background-color: #F6F6F6;
+    padding-left: 13px;
+    padding-right: 13px;
+    padding-bottom: 40px;
+    gap: 40px;
+    &__restaurant {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-family: Shrikhand;
+        font-size: 28px;
+        font-weight: 400;
+        margin: 32px 24px 0 0;
+        color: #101010;
+    }
+}
+
 .menu {
     display: flex;
     flex-direction: column;
+    gap: 12px;
+    &__title {
+        font-weight: 300;
+        font-size: 16px;
+        border-bottom: solid 3px #99E2D0;
+        width: 40px;
+        margin: 0;
+        padding-bottom: 5px;
+    }
+    &__card {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #FFFFFF;
+        height: 69px;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-radius: 15.04px;
+        box-shadow: 0px 4.01px 15.04px 0px #0000001A;
+        &__content {
+            display: flex;
+            flex-direction: column;
+        }
+        &__title {
+            margin: 0;
+            font-size: 18px;
+        }
+        &__subtitle {
+            margin: 5px 0 0 0;
+            font-size: 15.04px;
+            font-weight: 300;
+        }
+        &__price {
+            margin-top: 25px;
+            color: #353535;
+        }
+    }
 }
 
 .img-menu {
