--- a/scss/style.css
+++ b/scss/style.css
@@ -37,6 +37,15 @@
   display: none;
 }
 
+.header-arrow {
+  position: absolute;
+  top: 24px;
+  left: 23px;
+  z-index: 1001;
+  text-decoration: none;
+  color: #353535;
+}
+
 .btn-rounded {
   border-radius: 25px;
 }
@@ -59,6 +68,15 @@
 .btn-center {
   display: flex;
   justify-content: center;
+}
+
+.btn-commander {
+  padding: 16px 47px 15px 48px;
+  color: white;
+}
+
+.btn-shadow {
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
 }
 
 .icon-grey {
@@ -228,9 +246,71 @@
   width: 13px;
 }
 
+.base-menu {
+  display: flex;
+  flex-direction: column;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  position: relative;
+  margin-top: -50px;
+  z-index: 999;
+  background-color: #F6F6F6;
+  padding-left: 13px;
+  padding-right: 13px;
+  padding-bottom: 40px;
+  gap: 40px;
+}
+.base-menu__restaurant {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: Shrikhand;
+  font-size: 28px;
+  font-weight: 400;
+  margin: 32px 24px 0 0;
+  color: #101010;
+}
+
 .menu {
   display: flex;
   flex-direction: column;
+  gap: 12px;
+}
+.menu__title {
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom: solid 3px #99E2D0;
+  width: 40px;
+  margin: 0;
+  padding-bottom: 5px;
+}
+.menu__card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #FFFFFF;
+  height: 69px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 15.04px;
+  box-shadow: 0px 4.01px 15.04px 0px rgba(0, 0, 0, 0.1019607843);
+}
+.menu__card__content {
+  display: flex;
+  flex-direction: column;
+}
+.menu__card__title {
+  margin: 0;
+  font-size: 18px;
+}
+.menu__card__subtitle {
+  margin: 5px 0 0 0;
+  font-size: 15.04px;
+  font-weight: 300;
+}
+.menu__card__price {
+  margin-top: 25px;
+  color: #353535;
 }
 
 .img-menu {
