Ajout des menus

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ $third-color: #99E2D0;
 @import 'index-layout/reservation';
 @import 'index-layout/restaurant';
 @import 'footer/footer';
-@import 'menu-layout/menu.scss';
+@import 'menu-layout/menu';
 
 body {
     margin: 0;
