--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@ $third-color: #99E2D0;
 @import 'components/button';
 @import 'components/colors';
 @import 'components/card';
+@import 'components/heart';
 @import 'index-layout/fonctionnement';
 @import 'index-layout/reservation';
 @import 'index-layout/restaurant';
