--- a/scss/menu-layout/_menu.scss
+++ b/scss/menu-layout/_menu.scss
@@ -48,10 +48,11 @@
         &__content {
             display: flex;
             flex-direction: column;
-            flex-grow: 1;
+            flex: 1;
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+            cursor: pointer;
         }
         &__title {
             margin: 0;
@@ -70,7 +71,6 @@
         }
         &__price {
             color: #353535;
-            padding-left: 1rem;
             display: flex;
             justify-content: flex-end;
             align-items: flex-end;
@@ -83,7 +83,7 @@
     align-items: center;
     justify-content: center;
     background-color: #99E2D0;
-    width: 4rem;
+    width: 59px;
     margin: -1rem -5rem -1rem 1rem;
     transition: 0.5s;
     .fas {
@@ -98,12 +98,13 @@
     }
 }
 
-.menu__card:hover .checkbox-container {
-        margin-right: -1rem;
-}
-
 .menu-checkbox {
     display: none;
+}
+
+.menu-checkbox:checked ~ .checkbox-container {
+    margin-right: -1rem; /* Place la checkbox à l'intérieur de la carte */
+    transition: margin 0.5s ease, background-color 0.3s ease;
 }
 
 .img-menu {
