--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@ $third-color: #99E2D0;
 @import 'components/colors';
 @import 'components/card';
 @import 'components/heart';
+@import 'components/animation-menu';
 @import 'index-layout/fonctionnement';
 @import 'index-layout/reservation';
 @import 'index-layout/restaurant';
