--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -25,6 +25,11 @@
 .btn-commander {
     padding: 16px 47px 15px 48px;
     color: white;
+    transition: box-shadow 0.3s ease, filter 0.3s ease;
+    &:hover {
+        box-shadow: 0px 4px 15px 0px #00000059;
+        filter: brightness(1.10);
+    }
 }
 
 .btn-shadow {
