--- a/scss/style.css
+++ b/scss/style.css
@@ -73,6 +73,11 @@
 .btn-commander {
   padding: 16px 47px 15px 48px;
   color: white;
+  transition: box-shadow 0.3s ease, filter 0.3s ease;
+}
+.btn-commander:hover {
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
+  filter: brightness(1.1);
 }
 
 .btn-shadow {
@@ -153,18 +158,6 @@
   height: 2rem;
 }
 
-.heart-container .far {
-  font-size: 2rem;
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transition: opacity 0.2s ease-in-out;
-  z-index: 2;
-}
-
 .heart-container .fas {
   font-size: 2rem;
   position: absolute;
@@ -182,6 +175,18 @@
   transition: clip-path 0.4s ease-in-out;
   transition: clip-path 0.4s ease-in-out, -webkit-clip-path 0.4s ease-in-out;
   z-index: 1;
+}
+
+.heart-container .far {
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 2;
 }
 
 .heart-checkbox:checked + .far {
@@ -229,6 +234,11 @@
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 0;
+}
+.fonctionnement__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 24.92px;
 }
 .fonctionnement .btn-fonctionnement {
   display: flex;
@@ -449,13 +459,59 @@
   height: 275px;
 }
 
+/* Écrans de bureau */
+@media (min-width: 768px) {
+  .reservation {
+    padding-bottom: 30px;
+  }
+  .reservation__title {
+    font-size: 40px;
+    padding-bottom: 18px;
+    padding-top: 30px;
+  }
+  .reservation__subtitle {
+    padding: 10px 0px 25px 0px;
+  }
+  .btn-reservation {
+    width: 218px;
+    padding: 15px 0px;
+  }
+  .fonctionnement {
+    max-width: 1053px;
+    margin: auto;
+    padding-bottom: 50px;
+    padding-top: 50px;
+  }
+  .fonctionnement__cards {
+    flex-direction: row;
+  }
+  .restaurants {
+    padding-bottom: 15px;
+  }
+  .restaurants__container {
+    width: 100%;
+    max-width: 1080px;
+    margin: auto;
+  }
+  .restaurants__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  .footer {
+    flex-direction: row-reverse;
+    align-items: flex-end;
+    gap: 100px;
+    padding: 50px 26px 30px 20px;
+  }
+  .footer__ul {
+    flex-direction: row;
+    gap: 20px;
+  }
+}
 body {
   margin: 0;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
-}
-
-/****** Media Queries *******/
-/* Tablettes (et plus) */
-/* Écrans de bureau *//*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
