--- a/scss/media-queries/_menu-mediaquery.scss
+++ b/scss/media-queries/_menu-mediaquery.scss
@@ -1,2 +1,11 @@
 @media (min-width: 768px) {
+    .base-menu {
+        max-width: 1055px;
+        margin-left: auto;
+        margin-right: auto;
+        &__restaurant {
+            justify-content: center;
+            gap: 20px;
+        }
+    }
 }
