--- a/scss/menu-layout/_menu.scss
+++ b/scss/menu-layout/_menu.scss
@@ -21,6 +21,14 @@
         margin: 32px 24px 0 0;
         color: #101010;
     }
+    &__container {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        width: 100%;
+        max-width: 634px;
+        margin: auto;
+    }
 }
 
 .menu {
