--- a/scss/style.css
+++ b/scss/style.css
@@ -365,6 +365,14 @@
   margin: 32px 24px 0 0;
   color: #101010;
 }
+.base-menu__container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 100%;
+  max-width: 634px;
+  margin: auto;
+}
 
 .menu {
   display: flex;
@@ -506,6 +514,17 @@
   }
   .footer__ul {
     flex-direction: row;
+    gap: 20px;
+  }
+}
+@media (min-width: 768px) {
+  .base-menu {
+    max-width: 1055px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .base-menu__restaurant {
+    justify-content: center;
     gap: 20px;
   }
 }
