--- a/scss/menu-layout/_menu.scss
+++ b/scss/menu-layout/_menu.scss
@@ -117,6 +117,14 @@
     transition: margin 0.5s ease, background-color 0.3s ease;
 }
 
+
+/*
+.menu-checkbox:hover {
+    margin-right: -1rem;
+    transition: margin 0.5s ease, background-color 0.3s ease;
+}
+*/
+
 .img-menu {
     object-fit: cover;
     width: 100%;
