--- a/css/menu.css
+++ b/css/menu.css
@@ -1,51 +1,4 @@
 @charset "UTF-8";
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.header .header__box-logo {
-  height: 63px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
-  z-index: 1000;
-}
-.header .header__box-logo .logo--size {
-  height: 30px;
-  width: 162px;
-  padding-top: 14px;
-  padding-bottom: 5px;
-}
-.header .header__box-location {
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  background-color: #EAEAEA;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
-}
-.header .header__box-location .location--flex {
-  display: flex;
-  gap: 17px;
-  color: #353535;
-}
-.header .display-none {
-  display: none;
-}
-
-.header-arrow {
-  position: absolute;
-  top: 24px;
-  left: 23px;
-  z-index: 1001;
-  text-decoration: none;
-  color: #353535;
-}
-
 .btn-rounded {
   border-radius: 25px;
 }
@@ -106,8 +59,7 @@
   color: black;
 }
 .card__img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   height: 70%;
@@ -166,14 +118,10 @@
   right: 0;
   bottom: 0;
   background: linear-gradient(to top, #FF79DA, #9356DC);
-  -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
   color: transparent;
-  -webkit-clip-path: inset(100% 0 0 0);
-          clip-path: inset(100% 0 0 0); /* Masqué par défaut */
-  transition: -webkit-clip-path 0.4s ease-in-out;
+  clip-path: inset(100% 0 0 0); /* Masqué par défaut */
   transition: clip-path 0.4s ease-in-out;
-  transition: clip-path 0.4s ease-in-out, -webkit-clip-path 0.4s ease-in-out;
   z-index: 1;
 }
 
@@ -194,8 +142,7 @@
 }
 
 .heart-checkbox:checked ~ .fas {
-  -webkit-clip-path: inset(0 0 0 0);
-          clip-path: inset(0 0 0 0); /* Découvre progressivement de bas en haut */
+  clip-path: inset(0 0 0 0); /* Découvre progressivement de bas en haut */
 }
 
 .menu__card:nth-child(2) {
@@ -224,121 +171,51 @@
     opacity: 100%;
   }
 }
-.fonctionnement {
+.header {
   display: flex;
   flex-direction: column;
-  gap: 24.92px;
-  margin: 19px 20px 68px 20px;
-}
-.fonctionnement__title {
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 0;
-}
-.fonctionnement__cards {
-  display: flex;
-  flex-direction: column;
-  gap: 24.92px;
-}
-.fonctionnement .btn-fonctionnement {
-  display: flex;
-  justify-content: flex-start;
   align-items: center;
-  padding: 28.59px 0px 28.12px 0px;
-  background-color: #F6F6F6;
-  gap: 23px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
-  width: 95%;
-  margin-left: 12.51px;
 }
-.fonctionnement .btn-ordre {
-  display: flex;
-  position: relative;
-  left: -11px;
-  background-color: #9356DC;
-  color: white;
-  padding: 2px 7px 2px 7px;
-}
-
-.reservation {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  background-color: #F6F6F6;
-  padding-bottom: 57px;
-}
-.reservation__title {
-  font-size: 24px;
-  font-weight: 700;
-  padding: 39px 58px 10px 42px;
-  margin: 0;
-}
-.reservation__subtitle {
-  font-size: 18px;
-  font-weight: 300;
-  padding: 0px 26px 27px 34px;
-  color: #353535;
-}
-
-.btn-reservation {
+.header .header__box-logo {
+  height: 63px;
   display: flex;
   justify-content: center;
-  width: 50%;
-  color: white;
-  background: linear-gradient(0deg, #9356DC -11.44%, #FF79DA 123.39%);
-  padding: 13px 18.75px 13px 18.75px;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
-  transition: box-shadow 0.3s ease, filter 0.3s ease;
-}
-.btn-reservation:hover {
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.3490196078);
-  filter: brightness(1.1);
-}
-
-.restaurants {
-  background-color: #F6F6F6;
-  padding: 45px 0px 45px 0px;
-  display: flex;
-  flex-direction: column;
-}
-.restaurants__title {
-  margin-left: 20px;
-  margin-top: 9px;
-  font-size: 24px;
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  padding: 22px 25px 22px 25px;
-  background-color: #353535;
-  gap: 16px;
-}
-.footer__logo {
-  color: #FFFFFF;
-  font-family: Shrikhand;
-  font-weight: 400;
-  font-size: 18px;
-  margin: 0;
-}
-.footer__ul {
-  display: flex;
-  flex-direction: column;
-  gap: 7px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  color: #FFFFFF;
-  font-weight: 400;
-}
-.footer__li {
-  display: flex;
   align-items: center;
-  gap: 11px;
+  width: 100%;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
+  z-index: 1000;
+}
+.header .header__box-logo .logo--size {
+  height: 30px;
+  width: 162px;
+  padding-top: 14px;
+  padding-bottom: 5px;
+}
+.header .header__box-location {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #EAEAEA;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+}
+.header .header__box-location .location--flex {
+  display: flex;
+  gap: 17px;
+  color: #353535;
+}
+.header .display-none {
+  display: none;
 }
 
-.width-icone {
-  width: 13px;
+.header-arrow {
+  position: absolute;
+  top: 24px;
+  left: 23px;
+  z-index: 1001;
+  text-decoration: none;
+  color: #353535;
 }
 
 .base-menu {
@@ -460,51 +337,61 @@
   transition: margin 0.5s ease, background-color 0.3s ease;
 }
 
+/*
+.menu-checkbox:hover {
+    margin-right: -1rem;
+    transition: margin 0.5s ease, background-color 0.3s ease;
+}
+*/
 .img-menu {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 275px;
 }
 
-/* Écrans de bureau */
+.footer {
+  display: flex;
+  flex-direction: column;
+  padding: 22px 25px 22px 25px;
+  background-color: #353535;
+  gap: 16px;
+}
+.footer__logo {
+  color: #FFFFFF;
+  font-family: Shrikhand;
+  font-weight: 400;
+  font-size: 18px;
+  margin: 0;
+}
+.footer__ul {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: #FFFFFF;
+  font-weight: 400;
+}
+.footer__li {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+
+.width-icone {
+  width: 13px;
+}
+
 @media (min-width: 768px) {
-  .reservation {
-    padding-bottom: 30px;
+  .base-menu {
+    max-width: 1055px;
+    margin-left: auto;
+    margin-right: auto;
   }
-  .reservation__title {
-    font-size: 40px;
-    padding-bottom: 18px;
-    padding-top: 30px;
-  }
-  .reservation__subtitle {
-    padding: 10px 0px 25px 0px;
-  }
-  .btn-reservation {
-    width: 218px;
-    padding: 15px 0px;
-  }
-  .fonctionnement {
-    max-width: 1053px;
-    margin: auto;
-    padding-bottom: 50px;
-    padding-top: 50px;
-  }
-  .fonctionnement__cards {
-    flex-direction: row;
-  }
-  .restaurants {
-    padding-bottom: 15px;
-  }
-  .restaurants__container {
-    width: 100%;
-    max-width: 1080px;
-    margin: auto;
-  }
-  .restaurants__grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
+  .base-menu__restaurant {
+    justify-content: center;
+    gap: 20px;
   }
   .footer {
     flex-direction: row-reverse;
@@ -517,20 +404,11 @@
     gap: 20px;
   }
 }
-@media (min-width: 768px) {
-  .base-menu {
-    max-width: 1055px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .base-menu__restaurant {
-    justify-content: center;
-    gap: 20px;
-  }
-}
 body {
   margin: 0;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=menu.css.map */
